# AI-teams-controller-public

./: .gitignore  CLAUDE.md  README.md
AI-teams-controller-public/: .claudeignore  (+7 more)
AI-teams-controller-public/backend/: .env.example  .gitignore  CELERY_README.md  PO_VERIFICATION_sprint6_trackB.md  README.md  SPRINT6_TRACK_B_VERIFICATION.md  alembic.ini  celery_config.py  pyproject.toml  pytest.ini  requirements.txt  test_unknown_provider.py  test_voice_feedback_integration.py
AI-teams-controller-public/backend/alembic/: env.py
AI-teams-controller-public/backend/alembic/versions/: 376502d94c7b_add_user_settings_table.py  8818a61c9b7f_initial_migration_users_table.py
AI-teams-controller-public/backend/app/: __init__.py  database.py  main.py
AI-teams-controller-public/backend/app/api/: auth_routes.py  health_routes.py  routes.py  settings_routes.py  system_routes.py  template_routes.py
AI-teams-controller-public/backend/experiments/: INTEGRATION_GUIDE.md  README_TTS_COMPARISON.md  test_elevenlabs_tts.py  test_google_mixed_language.py  test_mixed_language_tts.py
AI-teams-controller-public/backend/scripts/: create_test_user.py  init_sqlite_demo.py  voice_stop_hook.sh
AI-teams-controller-public/backend/tests/: README.md  conftest.py  test_auth.py  test_auth_service.py  test_celery_tasks.py  test_command_processor.py  test_crud_ops.py  test_database.py  test_dedup_consolidation.py  test_file_search.py  test_file_validator_path_resolver.py  test_health_routes.py  test_jwt_migration.py  test_load_team.py  test_openai_removal.py  test_pane_state_service.py  test_restart_endpoints.py  test_routes.py  test_schemas.py  test_settings_routes.py  test_skip_logic.py  test_task_done_listener.py  test_template_generator.py  test_template_service.py  test_tmux_service.py  test_tmux_service_refactor.py  test_tree_ops.py  test_tts_providers.py  test_user_models.py  test_voice.py  test_voice_routes.py  test_voice_routes_split.py  test_ws_stability.py
(+892 files in other folders)
